# amemasu

./: .gitignore  Cargo.toml  README.md  TODO.org
certs/: cert.pem  key.pem
examples/: blobby.rs
src/: lib.rs  main.rs
src/data/: mod.rs
src/data/repositories/: mod.rs
src/data/sources/: mod.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs
src/domain/repositories/: mod.rs
src/domain/usecases/: delete.rs  fetch.rs  mod.rs  store.rs  validate.rs
