[package]
name = "amemasu"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
description = "Blob store and HTTP/S server with access control."
repository = "https://github.com/nlfiedler/amemasu"
readme = "README.md"
keywords = ["blob", "chunk"]
license = "MIT"
default-run = "amemasu"
exclude = [
    "TODO.org",
    "test/*",
]

[dependencies]
actix-multipart = "0.4.0"
actix-web = "4.2.1"
anyhow = "1.0.68"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.25"
log = "0.4.17"
mockall = "0.11.3"
once_cell = "1.16.0"
sha-1 = "0.10.1"
sha2 = "0.10.6"

[dev-dependencies]
clap = { version = "4.0.32", features = ["derive"] }
tempfile = "3.3.0"
