[package]
name = "amemasu"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
description = "Blob store and HTTP/S server with access control."
repository = "https://github.com/nlfiedler/amemasu"
readme = "README.md"
keywords = ["blob", "chunk"]
license = "MIT"
default-run = "amemasu"
exclude = [
    "TODO.org",
    "test/*",
]

[dependencies]
actix-multipart = "0.6.1"
actix-web = { version = "4.2.1", features = ["rustls"] }
actix-web-httpauth = "0.8.0"
anyhow = "1.0.68"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["full"] }
hyper-tls = "0.5.0"
jsonwebtoken = "8.2.0"
log = "0.4.17"
mockall = "0.11.3"
once_cell = "1.16.0"
rustls = "0.20.9"
rustls-pemfile = "1.0.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha-1 = "0.10.1"
sha2 = "0.10.6"
tokio = { version = "1.23.0", features = ["full"] }

[dev-dependencies]
clap = { version = "4.0.32", features = ["derive"] }
tempfile = "3.3.0"
